--- a/src/sk/server/Server_GUI.form
+++ b/src/sk/server/Server_GUI.form
@@ -21,7 +21,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="Send"/>
         </properties>
       </component>
       <component id="c53f9" class="javax.swing.JTextField" binding="textField1" default-binding="true">
